# Generation_of_Novel_Metastimulus

./: .gitmodules  README.md  setup.cfg  setup.py
Atom-Embeddings/: PDVM_3.py  PVDM_2.py  atom_embedding.py  atom_tag_pairing.py
Atom-FFNN/: Atom_FFNN.py
Atom_Embeddings/: README.md  atom_embedding.py  atom_tag_pairing.py
Learn-Master/: Learn-Master.py
Learn_Master/: Learn_Master.py  Predict.py  README.md
Learn_Master/checkpoints/: cresults.pkl  cresults_s05ep.pkl
Learn_Master/optimized_models/: results.pkl
Metastimuli-Learn/Atom-FFNN/: Atom_FFNN.py  FF-Optimizer.py  graphing_data.pkl  regress_graph_data.pkl
Metastimuli-Learn/Atom-RNN/: Atom_RNN.py  RNN-Optimizer.py  organized_ricocorpus.py
Metastimuli_Learn/: README.md
Metastimuli_Learn/Atom_FFNN/: Atom_FFNN.py
Metastimuli_Learn/Atom_RNN/: Atom_RNN.py
Misc_Data/: Graphing.py  Null_set.py  Projection_10dims.pkl  Projection_2dims.pkl  Projection_3dims.pkl  README.md  doc_dict.pkl  full_set.pkl  nullfull_list_of_sets.pkl  nulltest_set.pkl  prediction.pkl  raw_ricoparas.pkl  raw_ricotags.pkl
Ordered_Data/: Full_Ordered_Labels_10Dims.pkl  Full_Ordered_Labels_2Dims.pkl  Full_Ordered_Labels_3dims.pkl
Ordered_Data/BOWavg_sciart/: all_atoms.pkl  test.pkl  (+4 more)
PIMS-Filter/: pims-filter.py
Sciart-Processing/: Process_sciart.py  README.md
Shuffled_Data_1/: README.md  Randomizer.py
Tex-Processing/: Label_Text_Builder.py  Processing.py  README.md  clean_tex.py
Word-Embeddings/: Weighting_Keywords.py  word_embedding.py  word_embedding_ricocorpus.py
Word_Embeddings/: README.md  Weighting_Keywords.py
(+288 files in other folders)
