[metadata]
name = Metastimuli-Project
version = 0.0.1
author = Dane Webb
author_email = dane.webb@stmartin.edu
author_email = mr.dane.webb@gmail.com
description = Generates metastimuli

[options]
packages = find:
install_requires =
  python_version >= "3.6"
  numpy==1.18.5 
  matplotlib==3.3.3
  tensorflow==2.3.0 
  keras==2.4.3 
  keras-tuner==1.0.2
  gensim==3.8.3
  nltk==3.5
  scikit-learn=0.23.2
  sklearn
